# mcp-server-ascom

./: .env.example  .env.real_seestar  .envrc  .gitignore  .multitailrc  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NEXT_SESSION.md  NEXT_SESSION_NOTES.md  PERFORMANCE_FIX.md  PR_DESCRIPTION.md  QUICKSTART.md  README.md  REAL_SEESTAR_TESTING.md  RELEASE_NOTES_v0.3.0.md  RELEASE_v0.4.0.md  RELEASE_v0.5.0.md  SEESTAR_TESTING_GUIDE.md  STELLARPUNK_SETUP.md  TESTING.md  claude_desktop_config.example.json  docker-compose.yml  inspect.sh  install.sh  launcher.py  mcp_config_example.json  pyproject.toml  requirements-test.txt  run_tests.sh  seestar_complete_control.py  seestar_demo.py  setup_telescope_for_demo.sh  stellarpunk-profile-README.md  tasks.py  test_import.py  test_mcp_inspector.sh  (+3 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: branch-protection.md
.github/ISSUE_TEMPLATE/: bug_report.md  device_support.md  feature_request.md
.github/workflows/: ci-cd.yml  devcontainer-ci.yml  lint.yml  release.yml  test.yml
docs/: E2E_TESTING_GUIDE.md  EXECUTIVE_SUMMARY.md  MCP_CONFIGURATION_GUIDE.md  MIGRATION_v0.3.0.md  README.md  SDK_GUIDE.md  SEESTAR_MODE_GUIDE.md  api_examples.md  claude_desktop_setup.md  development.md  modern_features.md  seestar_integration.md  setup_guide.md  testing-strategy.md  troubleshooting.md
docs/architecture/: device_types.md  platform_overview.md
docs/community/: ecosystem.md
docs/mcp_bridge_design/: ai_enhancements.md  architecture.md  device_mapping.md  implementation_plan.md
docs/references/: citations.md
examples/: README.md  example_usage.py  fastmcp_example.py  seestar_example.py
examples/discovery/: direct_discovery.py  seestar_discovery.py  simple_discovery.py
examples/workflows/: complete_telescope_session.py
scripts/: check-env.sh  install.sh  run_tests.sh  test_before_release.sh  test_playwright.sh  test_real_seestar.sh  test_v0.4_direct_connection.py
scripts/debug/: debug_bytes.py  debug_server.py
src/ascom_mcp/: CLAUDE.md  __init__.py  __main__.py  ascom_logging.py  config.py  constants.py  logging.py  security.py  server.py  server_fastmcp.py
src/ascom_mcp/devices/: __init__.py  device_resolver.py  manager.py  seestar_event_bridge.py  seestar_event_handler.py  seestar_sse_consumer.py  state_persistence.py
src/ascom_mcp/resources/: __init__.py  event_stream.py
src/ascom_mcp/sdk/: __init__.py  client.py  commands.yaml  streaming.py
src/ascom_mcp/sdk/models/: __init__.py  commands.py  responses.py
src/ascom_mcp/sdk/services/: __init__.py  focus.py  imaging.py  status.py  telescope.py  viewing.py
src/ascom_mcp/tools/: __init__.py  base.py  camera.py  discovery.py  events.py  telescope.py  telescope_enhanced.py
src/ascom_mcp/utils/: __init__.py  content.py  errors.py
src/ascom_mcp/validation/: __init__.py  seestar_validator.py
tests/: CLAUDE.md  README.md  TESTING_STRATEGY.md  __init__.py  base.py  conftest.py  test_devcontainer_uv.sh  utils.py
tests/fixtures/: __init__.py  common.py  device_factory.py
tests/integration/: README.md  __init__.py  test_claude_desktop_integration.py  test_cli_entry.py  test_discovery_timeout.py  test_event_stream.py  test_iot_connection_pattern.py  test_mcp_commands.sh  test_mcp_integration.py  test_mcp_method_registration.py  test_mcp_protocol.py  test_mcp_server_startup.py  test_observation_workflow.py
tests/lifecycle/: test_terrestrial_viewing_lifecycle.py
tests/mcp/: README.md
tests/templates/: README.md  device_template.py  focuser_example.py
tests/unit/: __init__.py  test_camera_tools.py  test_device_manager.py  test_device_resolver.py  test_discovery_tools.py  test_seestar_operations.py  test_telescope_tools.py
tests/workflows/: seestar_mode_workflows.py  terrestrial_viewing_workflow.py
