[project]
name = "mcp-server-ascom"
version = "0.2.0"
description = "MCP server for ASCOM astronomy equipment control"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Stellarpunk Collective"}]
keywords = ["mcp", "ascom", "astronomy", "telescope", "alpaca", "stellarpunk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]
requires-python = ">=3.10"

[project.urls]
"Homepage" = "https://github.com/stellarpunk/mcp-server-ascom"
"Bug Tracker" = "https://github.com/stellarpunk/mcp-server-ascom/issues"
"Repository" = "https://github.com/stellarpunk/mcp-server-ascom"
"Organization" = "https://github.com/stellarpunk"

dependencies = [
    "mcp>=1.0.0",
    "alpyca>=2.0.0",
    "astropy>=6.0.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
mcp-server-ascom = "ascom_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
target-version = "py310"
line-length = 88
exclude = ["tests/templates/*.py"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"